[package]
name = "he-router"
version = "0.1.0"
edition = "2024"
authors = ["v1cc0 <vc@v1cc0.eu.org>"]
description = "HE routed IPv6 source binding helper for Rust applications"
license = "MIT"
repository = "https://github.com/v1cc0/he-router"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "native-tls", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
toml = "1.1.2"
