[package]
name = "he-router"
version = "0.1.8"
edition = "2024"
authors = ["v1cc0 <vc@v1cc0.eu.org>"]
description = "HE routed IPv6 source binding helper for Rust applications"
license = "MIT"
repository = "https://github.com/v1cc0/he-router"

[[bin]]
name = "he-router"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true }
httparse = "1.10.1"
quinn = "0.11.9"
rcgen = "0.14.7"
reqwest = { version = "0.13.3", default-features = false, features = [
  "json",
  "rustls",
  "native-tls",
  "socks",
] }
rustls = { version = "0.23.40", features = ["ring"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
sha2 = "0.11.0"
socket2 = "0.6.3"
thiserror = "2.0.18"
toml = "1.1.2"
tokio = { version = "1", features = ["full"] }
